@@ -8,5 +8,5 @@
     id="validation_helper.js" inline="False"/>
  <javascript cacheable="True" compression="none" cookable="True"
     enabled="True" expression="python: not here.restrictedTraverse('@@plone_portal_state').anonymous()"
-    id="multilanguage_tiny_mce_init.js" inline="False" insert-after="tiny_mce_init.js"/>
+    id="multilanguage_tiny_mce_init.js" inline="False"/>
 </object>
